add release notes dialog when an update happened, modify pyraminx and scrambles length + move pyraminx corner moves to the end of the scramble and change session times grid to have the most recent time at the top-left + adapt and write new unit tests